添加打包脚本